# missing_imputation

./: .gitattributes  .gitignore  CLAUDE.md  CONTRIBUTING.md  Data_linking_REDCap_TSQIC_ACCESS_oper_based_updated.ipynb  LICENSE  Merged_ACCESS.xlsx  Merged_REDCap.xlsx  Merged_TSQIC.xlsx  Merged_TSQIC_REDCap.xlsx  Merged_TSQIC_REDCap_ACCESS.xlsx  README.md  imputation.ipynb  imputation3.ipynb  imputation4_baseline_data1.ipynb  job2.sh  mkdocs.yml  multiple_duplicates.csv  pyproject.toml  requirements.txt  test2.py
.claude/: settings.json
.github/workflows/: ci.yml  docs.yml
data/: Merged_REDCap.xlsx  test_react_imputation_100_per_col_TopK_3_all_timepoints.jsonl
docs/: api.md  cli.md  evaluation.md  getting-started.md  index.md  methods.md
examples/: benchmark.py  quickstart.py
notebook/: FACTEmissing_investigation.ipynb  imputation7_baseline_data1.ipynb  imputation7_baseline_data1_withLLM.ipynb  imputation8_baseline_data1.ipynb
notebook/Baseline_only/: imputation.ipynb  imputation2.ipynb  imputation3.ipynb  imputation4_baseline_data1.ipynb  imputation5_baseline_data1.ipynb  imputation6_baseline_data1 copy.ipynb  imputation7_baseline_data1.ipynb  imputation8_baseline_data1.ipynb  imputation9_baseline_data1.ipynb  imputation9_baseline_data1_simulation.ipynb  job2_imputation9.sh  job2_imputation9_simulation.sh  test2_imputation9.py  test2_imputation9_simulation.py
notebook/Timeseries/imputation10/: imputation10_timeseries_data1.ipynb  test2_imputation10.py
notebook/Timeseries/imputation11/: imputation11_timeseries_data1.ipynb  job2.sh  (+1 more)
result plot/imputation6/: imputation_summary.csv
result plot/imputation7/: imputation_summary.csv  methylation_missing_imputation_test_44308121.out
result plot/imputation8/: facte_missing_imputation_test_48452551.out  imputation_summary.csv
result plot/imputation9/: facte_missing_imputation_test_48477239.out  imputation_summary.csv
script/: fineTuneLLM.py  job2.sh  jobs.py  test2.py
script/job_output/: FinalTopK3outputfin64860948.txt
session_reports/: 2026-06-03.md  2026-06-04.md  2026-06-18.md
src/missing_imputation/: __init__.py  cli.py  columns.py  metrics.py  synthetic.py
tests/: test_evaluation.py  test_methods.py  test_metrics.py  test_synthetic.py
(+72 files in other folders)
